--- a/css/box.css
+++ b/css/box.css
@@ -3,6 +3,20 @@ body {
     padding: 0;
 }
 
+.gradient {
+    background: linear-gradient(
+        90deg,rgba(45,156,219,.6),rgba(155,81,224,.6));
+}
+
+.btn {
+    padding: 10px 20px;
+    border-radius: 25px;
+    color:white;
+    text-decoration: none;
+    -webkit-box-shadow: 2px 4px 5px 2px rgba(0,0,0,0.34); 
+    box-shadow: 2px 4px 14px 14px rgba(0,0,0,0.34);
+}
+
 .container {
     margin-top: 50px;
     width: 1000px;
